--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
-<div style="width: 100%; display: flex; align-items: center; position: relative; flex-wrap: wrap;">
+<div style="width: 100%; display: flex; align-items: center; position: relative; flex-wrap: wrap; font-family: arial;">
     <!-- Contenedor de la imagen -->
-    <div style="position: relative; width: 130px; height: 420px; text-align: center;">
-        <img src="https://moodle.upc.edu.ar/draftfile.php/50179/user/draft/54534762/Angelina Jolie.jpg" alt="Foto del docente" style="width: 125px; height: 125px; border-radius: 50%; border: 1px solid #FF8000; 
-                    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3); position: relative; z-index: 2;">
+    <div style="position: relative; width: 125px; height: 420px; text-align: center;">
+        <!--<img src="https://moodle.upc.edu.ar/draftfile.php/50179/user/draft/54534762/Angelina Jolie.jpg" alt="Foto del docente" style="width: 125px; height: 125px; border-radius: 50%; border: 1px solid #FF8000; 
+                    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3); position: relative; z-index: 2;">-->
+                    <img src="https://png.pngtree.com/thumb_back/fh260/background/20230614/pngtree-i-like-the-colorful-face-of-this-man-in-the-helmet-image_2970566.jpg" alt="Foto del docente" 
+                    style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid #f6a400; 
+                    /*box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);*/ position: relative; z-index: 2; padding: 3px; background-color: #ffffff;">
     </div>
 
     <!-- Contenedor del nombre y descripción -->
     <div style="flex: 1; min-width: 200px; height: 420px; margin-left: -55px; display: flex; flex-direction: column;">
         <!-- Nombre con fondo -->
-        <div style="background-color: #FE9A2E; color: white; padding: 10px 5px;
+        <div style="background-color: #f6a400; color: white; padding: 0px 110px;
                     display: flex; align-items: center;
                     border-top-right-radius: 20px; border-bottom-right-radius: 20px;
                     border-top-left-radius: 50px; border-bottom-left-radius: 50px;
-                    max-width: 100%;">
-            <span style="font-size: 16px; padding-left: 55px;">Lic. <span style="font-weight: bold;">Angelina Jolie</span></span>
+                    max-width: 100%; height: 50px; box-shadow: 1px 1px 3px #888;">
+            <span style="font-size: 20px; font-weight: bold;">Lic. Angelina Jolie</span>
         </div>
 
         <!-- Descripción -->
-        <div style="text-align: justify; padding: 10px 65px; font-size: 12px; color: rgb(85, 85, 85);">
+        <div style="text-align: justify; padding: 10px 65px 10px 110px; font-size: 14px; color: #888888; ">
+            Psicomotricista (Instituto Superior Dr. Domingo Cabred, 1990) Licenciada en Psicomotricidad (Univ. De Morón, 2014). Profesora Universitaria (Universidad Provincial de Córdoba- UPC). Especialista en Docencia Universitaria (Universidad Tecnológica Nacional- Regional Córdoba). Maestrando en Docencia Universitaria (Universidad Tecnológica Nacional- Regional Córdoba). Docente concursada y Directora de la Licenciatura en Psicomotricidad de la Facultad de Educación y Salud- UPC. Docente de la Especialización en Intervenciones socioeducativas en infancias tempranas. Experiencia como psicomotricista en atención clínica con infancias tempranas. Contacto: angelina@upc.edu.ar</div>
+        <div style="text-align: justify; padding: 10px 65px; font-size: 12px; color: rgb(85, 85, 85);"><br></div>
+    </div>
+</div>
+
+<div style="width: 100%; display: flex; align-items: center; position: relative; flex-wrap: wrap; font-family: arial;">
+    <!-- Contenedor de la imagen -->
+    <div style="position: relative; width: 125px; height: 420px; text-align: center;">
+        <!--<img src="https://moodle.upc.edu.ar/draftfile.php/50179/user/draft/357020382/Angelina Jolie.jpg" alt="Foto del docente" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid #f6a400; 
+                    /*box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);*/ position: relative; z-index: 2; padding: 3px; background-color: #ffffff;">-->
+        <img src="https://png.pngtree.com/thumb_back/fh260/background/20230614/pngtree-i-like-the-colorful-face-of-this-man-in-the-helmet-image_2970566.jpg" alt="Foto del docente" 
+                    style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid #f6a400; 
+                    /*box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);*/ position: relative; z-index: 2; padding: 3px; background-color: #ffffff;">
+    </div>
+
+    <!-- Contenedor del nombre y descripción -->
+    <div style="flex: 1; min-width: 200px; height: 420px; margin-left: -64px; display: flex; flex-direction: column;">
+        <!-- Nombre con fondo -->
+        <div style="background-color: #f6a400; color: white; padding: 0px 110px;
+                    display: flex; align-items: center;
+                    border-top-right-radius: 20px; border-bottom-right-radius: 20px;
+                    border-top-left-radius: 50px; border-bottom-left-radius: 50px;
+                    max-width: 100%; height: 50px; box-shadow: 1px 1px 3px #888; margin-right: 2px;">
+            <span style="font-size: 26px; font-weight: bold;">Lic. Angelina Jolie</span>
+        </div>
+
+        <!-- Descripción -->
+        <div style="text-align: justify; padding: 10px 65px 10px 110px; font-size: 14px; color: #888888; ">
             Psicomotricista (Instituto Superior Dr. Domingo Cabred, 1990) Licenciada en Psicomotricidad (Univ. De Morón, 2014). Profesora Universitaria (Universidad Provincial de Córdoba- UPC). Especialista en Docencia Universitaria (Universidad Tecnológica Nacional- Regional Córdoba). Maestrando en Docencia Universitaria (Universidad Tecnológica Nacional- Regional Córdoba). Docente concursada y Directora de la Licenciatura en Psicomotricidad de la Facultad de Educación y Salud- UPC. Docente de la Especialización en Intervenciones socioeducativas en infancias tempranas. Experiencia como psicomotricista en atención clínica con infancias tempranas. Contacto: angelina@upc.edu.ar</div>
         <div style="text-align: justify; padding: 10px 65px; font-size: 12px; color: rgb(85, 85, 85);"><br></div>
     </div>
